# DSHS-Mini-Projecr

./: README.md  main.py  pyproject.toml
src/: app.py  model_artifacts.joblib  train.py
