[project]
name = "dshs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.0.1",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "xgboost>=3.0.5",
]
